Thu May  7 21:12:17 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * modules/Driver.pm:

          Removed a debugging print statement.

Thu May  7 19:18:24 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ConfigParser.pm:
        * modules/Driver.pm:

          Modified the locate_dynamic_directories code to only warn the user
          if the path doesn't contain environment variables or the
          environment variables that it does contain are set.

        * modules/ProjectCreator.pm:

          Fixed a perl warning about an uninitialized variable.

Thu May  7 15:39:17 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/BCB2007ProjectCreator.pm:
        * modules/BDS4ProjectCreator.pm:
        * modules/BMakeProjectCreator.pm:
        * modules/BorlandProjectBase.pm:
        * modules/GHSProjectCreator.pm:
        * modules/MakeProjectBase.pm:
        * modules/NMakeProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/VCProjectBase.pm:
        * modules/WinProjectBase.pm:

          Modified the 'specific' clause to accept "properties" in addition
          to project types.  Maintaining project type lists within the base
          projects was getting out of hand.  A simpler approach is to apply
          properties to groups of project types, such as project types that
          are only used on Windows.  These properties are referenced within
          the 'specific' clause instead of project types.  See the README
          for more details.

        * config/boost_date_time.mpb:
        * config/boost_filesystem.mpb:
        * config/boost_iostreams.mpb:
        * config/boost_prg_exec_monitor.mpb:
        * config/boost_program_options.mpb:
        * config/boost_regex.mpb:
        * config/boost_serialization.mpb:
        * config/boost_signals.mpb:
        * config/boost_system.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_thread.mpb: