@@ -13,6 +13,8 @@ prversion = This setting specifies the ProductVersion in the generated .csproj f
 registerforcominterop = This setting corresponds to the Build Output property "Register for COM interop". The boolean values true and false correspond to enabling or disabling the feature in the IDE.
 schemaversion = This setting specifies the SchemaVersion in the generated .csproj file.
 startupobject = This corresponds to the Application property "Startup object".
+toolsversion = The ToolsVersion attribute of the Project XML element.
 trace = This setting corresponds to the Build General property "Conditional Compilation Constants". If this boolean template variable is set, the TRACE constant will be defined.
 warning_level = This corresponds to the Build General property "Warning level". Valid values are 0 through 4.
 winapp = This boolean template variable indicates whether the application target is for the Console or Windows subsystem.
+xmlheader = Enable the <?xml ...?> header.
