@@ -1,4 +1,5 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<%if(xmlheader)%><?xml version="1.0" encoding="utf-8"?>
+<%endif%><Project<%if(toolsversion)%> ToolsVersion="<%toolsversion%>"<%endif%> DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion><%prversion("8.0.50727")%></ProductVersion>
